Edited logo on header to prevent overlapping, and registration page form is polished and refined.

--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -19,8 +19,8 @@ body, .bg-light {
 	}
 }
 #logo{
-    width: 35%;
-    margin-right: 35%;
+    width: 18%;
+    margin-right: 45%;
     position: relative;
 }
 
